<resources>
    <string name="app_name">UltimateConverter</string>
    <string name="main_title">Choose your conversion</string>
    <string name="meters_to_inches">Meters To Inches</string>
    <string name="cups_to_teaspoons">Cups to Teaspoons</string>
    <string name="inches_to_centimeters">Inches to Centimeters</string>
    <string name="inches_to_meters">Inches to Meters</string>
    <string name="teaspoons_to_cups">Teaspoons to Cups</string>
    <string name="centimeters_to_inches">Centimeters to Inches</string>
    <string name="convert">Convert</string>
    <string name="enter_in_inches">Enter in Inches</string>
    <string name="enter_in_centimeters">Enter in Centimeters</string>
    <string name="enter_in_cups">Enter in Cups</string>
    <string name="enter_in_teaspoons">Enter in Teaspoons</string>
</resources>