<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/metersToInchesButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="64dp"
        android:background="#6070CC"
        android:text="@string/meters_to_inches"
        android:textColor="#E7D10D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/inchesToMetersButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="#B35353"
        android:text="@string/inches_to_meters"
        android:textColor="#85E4DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/inchesToCentimetersButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="100dp"
        android:background="#6070CC"
        android:text="@string/inches_to_centimeters"
        android:textColor="#E7D10D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metersToInchesButton" />

    <Button
        android:id="@+id/centimetersToInchesButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="#B35353"
        android:text="@string/centimeters_to_inches"
        android:textColor="#85E4DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inchesToMetersButton" />

    <Button
        android:id="@+id/cupsToTeaspoonsButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="100dp"
        android:background="#6070CC"
        android:text="@string/cups_to_teaspoons"
        android:textColor="#E7D10D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inchesToCentimetersButton" />

    <Button
        android:id="@+id/teaspoonsToCupsButton"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="#B35353"
        android:text="@string/teaspoons_to_cups"
        android:textColor="#85E4DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centimetersToInchesButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/main_title"
        android:textColor="#1C2F96"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>